add initial files, html elements, business logic keys

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <title>Places</title>
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <form class="form-group" id="place">
+            <label for="locationName"></label>
+            <input type="text" id="locationName">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+        <div class="col">
+          <div id="output">
 
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
