--- a/index.html
+++ b/index.html
@@ -12,15 +12,34 @@
     <div class="container">
       <div class="row">
         <div class="col">
+          <h1>Log a location!</h1>
           <form class="form-group" id="place">
-            <label for="locationName"></label>
-            <input type="text" id="locationName">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <label for="locationName" class="mt-3">Location:</label>
+            <input class="form-control" type="text" id="locationName">
+
+            <label for="date" class="mt-3">Date visited:</label>
+            <input class="form-control" type="date" id="date">
+
+            <label for="landmark" class="mt-3">Major landmark:</label>
+            <input class="form-control" type="text" id="landmark">
+
+            <label for="climate" class="mt-3">Location's climate:</label>
+            <input class="form-control" type="text" id="climate">
+
+            <button type="submit" class="btn btn-primary mt-3">Submit</button>
           </form>
         </div>
         <div class="col">
+          <div id="show-location">
+            <h2></h2>
+            <p class="date"></p>
+            <p class="landmark"></p>
+            <p class="climate"></p>
+          </div>
           <div id="output">
+            <ul>
 
+            </ul>
           </div>
         </div>
       </div>
